# lung-segmentation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  segment_config.txt
app/: CMakeLists.txt  run_segmentation.cc
include/: core_algorithms.h  file_arrange.h  image_io.h  image_utils.h  seg_config.h  utils.h
include/impl/: core_algorithms.hpp  image_io.hpp  image_utils.hpp
